--- a/Register/template/home.html
+++ b/Register/template/home.html
@@ -13,7 +13,7 @@
   <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar scroll</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,16 +45,18 @@
           <form class="d-flex"  >
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
+            
           </form>
         </div>
         <div >
           <a href="{% url 'login' %}" class="btn btn-primary">Login</a> 
           <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a> 
+          
         </div>
-       
-       
       </div>
+      
     </nav>
+    <img class="w-100  " style="margin-top: -56px; height: auto;" src="https://img.freepik.com/free-photo/cheerful-lady-standing-with-shopping-bags-smiling-looking-happy-pink-background_1258-122868.jpg?w=1380&t=st=1687398064~exp=1687398664~hmac=860d7d0c0ea05869c51a8a151d7205dca3eeeeeb3205159b92fe9859fb729abe" />
 
  
 
