--- a/Register/template/home.html
+++ b/Register/template/home.html
@@ -1,39 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
+{%extends 'base.html' %}
+{%block title %}
+home
+{%endblock%}
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{%block condent%}
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Home Page</title>
-    <style>
-      .bgimg{
-        background-image: url('https://img.freepik.com/free-photo/excited-girl-scream-joy-making-fist-pump-holding-shopping-bag-rejoicing-standing-dress-ove_1258-120529.jpg?w=1380&t=st=1687399823~exp=1687400423~hmac=c8862ab78325b7f30662d57df2ba455cd8570b55032de2d1946d4af01b883511');
-        background-repeat: no-repeat;
-      }
-    </style>
-    
-  </head>
-  <body>
+{%endblock%}
 
 
-    <div class="bgimg    " style=" height: 400px;" >
-    
-
-    </div>
-
- 
-<!-- 
-    <div >
-      <a href="{% url 'login' %}" class="btn btn-primary">Login</a> 
-      <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a> 
-      
-    </div> -->
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
