--- a/Register/template/home.html
+++ b/Register/template/home.html
@@ -4,7 +4,41 @@ home
 {%endblock%}
 
 {%block condent%}
-
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="1000">
+      <img src="https://img.freepik.com/free-photo/composition-black-friday-with-cart-gift-boxes_23-2147696791.jpg?w=1060&t=st=1687622280~exp=1687622880~hmac=08f0e50592f37deab4415c4de8f613e0b7fdc4a0d9365c016e959119f46154e0" class="d-block w-100" alt="...">
+      
+    </div>
+    <div class="carousel-item" data-bs-interval="1000">
+      <img src="https://img.freepik.com/free-photo/front-view-cyber-monday-shopping-cart-with-bags-copy-space_23-2148657638.jpg?w=1380&t=st=1687622122~exp=1687622722~hmac=2aea963aa2f021faef6e0620195c978c51cb5ce1e4b4cc4bb98f5b0616976c46" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://img.freepik.com/free-photo/black-friday-decoration-with-coins-cart_23-2147696837.jpg?w=1060&t=st=1687622255~exp=1687622855~hmac=099ec31817452bbf35e8571ca2193e199254c4d3f4a9ceb234e6b6fac9469adf" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 {%endblock%}
 
 
